--- a/src/pages/examples/simple-dynamic-map-layer.hbs
+++ b/src/pages/examples/simple-dynamic-map-layer.hbs
@@ -12,7 +12,7 @@ layout: example.hbs
   L.esri.basemapLayer('Gray').addTo(map);
 
   L.esri.dynamicMapLayer({
-    url: 'https://services.arcgisonline.com/arcgis/rest/services/Specialty/Soil_Survey_Map/MapServer',
+    url: 'https://gis.glc.org/server/rest/services/ErieStat/PriorityWatersheds/MapServer',
     opacity: 0.7
   }).addTo(map);
 </script>
